fix gradle build and gitignore